@@ -2,7 +2,7 @@
  *                                                                         *
  *   libgig - C++ cross-platform Gigasampler format file access library    *
  *                                                                         *
- *   Copyright (C) 2003-2006 by Christian Schoenebeck                      *
+ *   Copyright (C) 2003-2007 by Christian Schoenebeck                      *
  *                              <cuse@users.sourceforge.net>               *
  *                                                                         *
  *   This library is free software; you can redistribute it and/or modify  *
@@ -713,6 +713,7 @@ namespace gig {
             Group*      GetGroup(uint index);
             Group*      AddGroup();
             void        DeleteGroup(Group* pGroup);
+            void        DeleteGroupOnly(Group* pGroup);
             virtual    ~File();
         protected:
             // overridden protected methods from DLS::File
